--- a/edc0.tex
+++ b/edc0.tex
@@ -2,36 +2,36 @@
 
 \pdfcode \begingroup%\corkfont
   \pdfinfo{
-   /Author (© Ramón Casares 2010)
+   /Author (Â© RamÃ³n Casares 2010)
    /Title (El doble compresor)
-   /Subject (La teoría de la información)
+   /Subject (La teorÃ­a de la informaciÃ³n)
    /Creator (Licencia http://creativecommons.org/licenses/by-sa/3.0/)
-   /Keywords (filosofía epistemología problema
-              sujeto objeto información)}
+   /Keywords (filosofÃ­a epistemologÃ­a problema
+              sujeto objeto informaciÃ³n)}
  \endgroup
 \pdfendcode
 
-\centerline{\fontone Ramón Casares}
+\centerline{\fontone RamÃ³n Casares}
 \vskip1pc
 \hrule height 1pt
 \vskip1.5pc
 \centerline{\fontzero El doble compresor}
 
-\vfill\break % [1] Autor y título
+\vfill\break % [1] Autor y tÃ­tulo
 
 \null
 
-\vfill\break % [2] Colección (en blanco)
+\vfill\break % [2] ColecciÃ³n (en blanco)
 
-\centerline{\fontone Ramón Casares}
+\centerline{\fontone RamÃ³n Casares}
 \vskip1pc
 \hrule height 1pt
 \vskip1.5pc
 \centerline{\fontzero El doble compresor}
 \vskip1pc
-\centerline{\fontone La teoría de la información}
+\centerline{\fontone La teorÃ­a de la informaciÃ³n}
 
-\vfill\break % [3] Autor, Título, Subtítulo
+\vfill\break % [3] Autor, TÃ­tulo, SubtÃ­tulo
 
 \null 
 
@@ -42,12 +42,12 @@
 
 \vfill
  {\sl El doble compresor}\par
- {\sl La teoría de la información}\par
- 1ª edición (\todayiso)\par
+ {\sl La teorÃ­a de la informaciÃ³n}\par
+ 1Âª ediciÃ³n (\todayiso)\par
  \null\par
  Publicado por \URI{www.ramoncasares.com}{http://www.ramoncasares.com}\par
- \copyright\ Ramón Casares, 2010\par
- Este libro queda liberado conforme a los términos de la licencia\par
+ \copyright\ RamÃ³n Casares, 2010\par
+ Este libro queda liberado conforme a los tÃ©rminos de la licencia\par
  \ccbysa\ {\sf Creative Commons Attribution-ShareAlike 3.0},\par
  \URI{http://creativecommons.org/licenses/by-sa/3.0/}%
      {http://creativecommons.org/licenses/by-sa/3.0/}\par
@@ -55,19 +55,19 @@
  ISBN-13: 978-1-4536-0915-6\par
  ISBN-10: 1-4536-0915-6\par
 
-\break % [4] Créditos
+\break % [4] CrÃ©ditos
 
 
 \null
 \vskip5pc
 \begingroup\it
  % Dedicatoria
- \rightline{A mis hijos Ramón e Inés}
+ \rightline{A mis hijos RamÃ³n e InÃ©s}
 \vskip3pc
  % Agradecimientos
- \rightline{Valentín Fernández Vidal}
+ \rightline{ValentÃ­n FernÃ¡ndez Vidal}
  \rightline{sabe de este libro}
- \rightline{más de lo que él mismo cree.}
+ \rightline{mÃ¡s de lo que Ã©l mismo cree.}
  \rightline{Muchas gracias.}
  \rightline{R.C.}
 \endgroup
