edc4.tex: \S105 \P3 conté -> he contado

--- a/edc4.tex
+++ b/edc4.tex
@@ -929,7 +929,7 @@ esclarecen los aspectos más peculiares de nuestra especie
 
 En el siglo {\sc xx} se produjeron dos grandes ^revoluciones^
 epistemológicas, que no aparecieron en ningún ^periódico^. La ^física
-cuántica^ rompió el ^objetivismo^, como ya le conté, y en las
+cuántica^ rompió el ^objetivismo^, como ya le he contado, y en las
 ^matemáticas^, el ^teorema de incompletitud^ de \[Gödel] de 1931, y la
 resolución del ^problema de la decisión^, por \[Church] y \[Turing] en
 1936, rompieron el ^materialismo^. Bueno, esto último es lo que voy a
