edc3.tex: \S72 \P4 añado una coma

--- a/edc3.tex
+++ b/edc3.tex
@@ -612,7 +612,7 @@ hacemos, representamos la imagen mental. Yo diría que, lo que sucede, es
 que para dibujar hemos de ver los objetos producidos por nuestra propia
 percepción, y que sólo al aprender a hablar empezamos a {\em verlos},
 y lo digo. El lenguaje simbólico nos da acceso a nuestra propia imagen
-mental. ¿No es sorprendente? Pero ---se pregunta usted--- ¿puede ser
+mental. ¿No es sorprendente? Pero ---se pregunta usted---, ¿puede ser
 cierto?
 
 
