edc.tex: uso rm-lmr10 como font \tenrm
Por no hacerlo perdía las letras griegas mayúsculas derechas,
como por ejemplo las letras \Phi de la \S50 \P2.

--- a/edc.tex
+++ b/edc.tex
@@ -16,7 +16,7 @@
 % Fonts
 
 \lmfonts\lmtitles\ansifont
- \font\tenrm=texnansi-lmr10
+ \font\tenrm=rm-lmr10 \textfont0=\tenrm
 \font\frakx=eufm10
 \font\frakvii=eufm7
 \newfam\frakfam \textfont\frakfam=\frakx \scriptfont\frakfam=\frakvii
