edc.tex, edc0.tex, ean13.tex: añado portadas
Ahora la primera y la última página son la
portada y la contraportada en rojo del libro.

--- a/tex/edc.tex
+++ b/tex/edc.tex
@@ -31,6 +31,18 @@
 \font\ccicons=ccicons
 \def\ccbysa{{\ccicons \char0\kern1pt\char1\kern1pt\char2}}
 
+\font\ptitlefont=texnansi-lmssbx10 at 90pt
+\font\psubtitlefont=texnansi-lmss10 at 40pt
+\font\pauthorfont=texnansi-lmss10 at 50pt
+\font\pcitafont=texnansi-lmss10 at 21pt
+\font\ptextfont=texnansi-lmss10 at 14pt
+
+\def\pdfBlack{\pdfliteral{0 0 0 1 k 0 0 0 1 K}}
+\def\pdfWhite{\pdfliteral{0 0 0 0 k 0 0 0 0 K}}
+\def\pdfRed{\pdfliteral{0 1 1 0 k 0 1 1 0 K}}
+\def\pdfBlue{\pdfliteral{1 1 0 0 k 1 1 0 0 K}}
+\def\pdfGreen{\pdfliteral{1 0 1 0 k 1 0 1 0 K}}
+
 \catcode`\@=11
 
 % Layout
@@ -56,6 +68,17 @@
 \raggedbottom
 
 \def\breakif#1{\vskip#1\baselineskip \penalty-250 \vskip-#1\baselineskip}
+
+\def\background{\pdfcode
+  \pdfliteral{q}% save current graphic state in the stack
+  \pdfRed
+  \pdfliteral{-67 -574 m}% 72 * 9 = 648, 72 * 8 = 576
+  \pdfliteral{365 -574 l}% 72 * 6 = 432, 72 * 5 = 360
+  \pdfliteral{365 74 l}%
+  \pdfliteral{-67 74 l}%
+  \pdfliteral{-67 -574 l}%
+  \pdfliteral{b Q}% close, stroke, fill, and restore graphic state
+ \pdfendcode}
 
 %\colors      % OPTIONAL COLORS
 \def\RED{\ifx\Yellow\relax\else
@@ -362,5 +385,77 @@
  que hice con {\em su} programa {\logo METAFONT}.
 \endcenter
 
-\let\vfill=\relax
+\break
+
+\null
+\vfill\break
+
+\shipout\vbox{\background
+\pdfWhite
+\hsize=5.5in
+\leftskip-0.55in
+\vskip-0.55in
+\begingroup\pcitafont\parindent=0pt\baselineskip=24pt\obeylines
+
+``El mundo no es una máquina enorme,
+\leavevmode\kern12pt como creen los materialistas,
+\leavevmode\kern12pt sino un enigma inmenso'' {\ptextfont(§160 ¶6)}
+
+\endgroup
+
+\vskip 1pc
+
+\begingroup\ptextfont\parindent=0pt\baselineskip=16pt\obeylines
+
+En el libro le muestro las limitaciones del materialismo,
+y le presento una teoría para superarlo.
+Como vía de ataque utilizo el concepto de información,
+que investigo con usted inspeccionando juntos las grietas de la
+percepción. Mi evaluación subjetivista es concluyente:
+la realidad no es lo que está fuera,
+sino el producto de la percepción.
+\null
+Pero, resulta que el poder expresivo de los procesos perceptivos
+es limitado. La prueba es que podemos hablar de cosas que
+no podemos observar. Por esto, la realidad no lo es todo, sino la
+representación de lo exterior que construye la percepción
+con sus exiguos recursos expresivos. Y el materialismo, al ceñirse
+a lo observable, a lo medible, es innecesariamente pobre.
+Urge superar esta situación.
+\null
+Visto que el habla es más expresiva que la percepción,
+me fijo en que no podemos percibir los problemas.
+Entonces demuestro que, para poder representar todos los
+conceptos de la teoría del problema, es necesaria una
+sintaxis recursiva. Esto es muy técnico, pero,
+basta saber que la sintaxis del habla es una sintaxis recursiva,
+para entender por qué sólo los sujetos parlantes podemos
+examinar mentalmente las posibles resoluciones de un problema.
+También le explico la consciencia, pero, para alcanzar los detalles,
+ha de leer el interior de este libro.
+
+\endgroup
+
+\kern12bp
+
+\pdfBlack
+\input ean13
+\hbox{\kern-0.55in
+\pdfximage{cc-by-sa-www.pdf}\pdfrefximage\pdflastximage
+\kern2.05in
+\pdfliteral{q}% save current graphic state in the stack
+  \pdfliteral{0 0 0 0 k 0 0 0 1 K}% set black stroke on white fill
+  \pdfliteral{-5 -5 m}% moves to the origin
+  \pdfliteral{110 -5 l}%
+  \pdfliteral{110 92 l}%
+  \pdfliteral{-5 92 l}%
+  \pdfliteral{-5 -5 l}%
+  \pdfliteral{b Q}% close, stroke, fill, and restore graphic state
+\ISBN 978-1-4536-0915-6
+\barheight=2.5cm % this must be after \ISBN call
+\EAN 978-1-4536-0915-6
+\hskip9pt
+}
+}
+
 \bye
