--- a/tex/edc0.tex
+++ b/tex/edc0.tex
@@ -11,17 +11,32 @@
  \endgroup
 \pdfendcode
 
+\shipout\vbox{\background
+\pdfWhite
+\hbox{}
+\vskip2in
+\centerline{\ptitlefont El doble}
+\vskip1pc
+\centerline{\ptitlefont compresor}
+\vskip10pc
+\centerline{\psubtitlefont La teoría de la}
+\vskip6pt
+\centerline{\psubtitlefont información}
+\vskip2pc
+\centerline{\pauthorfont Ramón Casares}
+\pdfBlack
+}
+
+% [1] Autor y título
+
 \centerline{\fontone Ramón Casares}
 \vskip1pc
 \hrule height 1pt
 \vskip1.5pc
 \centerline{\fontzero El doble compresor}
 
-\vfill\break % [1] Autor y título
-
-\null
-
 \vfill\break % [2] Colección (en blanco)
+\advance\pageno1
 
 \centerline{\fontone Ramón Casares}
 \vskip1pc
