--- a/tex/edc.tex
+++ b/tex/edc.tex
@@ -338,7 +338,7 @@
 
 \begindoublecolumns
 \parindent=20pt \rightskip=0pt plus 4pc \hyphenpenalty=250
-\ifauxf\input auxiliar.abc\fi
+\ifindf\input auxiliar.abc\fi
  \ifrange --\number\lastpgno \fi \rangefalse
 \enddoublecolumns
 
