--- a/README
+++ b/README
@@ -33,6 +33,8 @@ git clone git://github.com/ramoncasares/edc.git
 cd ~/edc/tex
 wpdf edc
 \endcode
+If dir "~/bin" is not in your "$PATH",
+then the last command should be "~/bin/wpdf edc".
 \endnumbers
 
 
@@ -66,6 +68,8 @@ git clone git://github.com/ramoncasares/edc.git
 cd ~/edc/tex
 wpdf edc
 \endcode
+Si el directorio "~/bin" no está en tu "$PATH",
+entonces este último comando debe ser "~/bin/wpdf edc".
 \endnumbers
 
 \bye
