edc0.tex: editoriales: muevo comentarios

--- a/tex/edc0.tex
+++ b/tex/edc0.tex
@@ -1,6 +1,9 @@
 % edc0.tex (RMCG200050707)
 
-\pdfcode \begingroup%\corkfont
+% Front matter
+
+\pdfcode
+ \begingroup%\corkfont
   \pdfinfo{
    /Author (© Ramón Casares 2010)
    /Title (El doble compresor)
@@ -38,6 +41,8 @@
 \vfill\break % [2] Colección (en blanco)
 \advance\pageno1
 
+% [3] Autor, Título, Subtítulo
+
 \centerline{\fontone Ramón Casares}
 \vskip1pc
 \hrule height 1pt
@@ -46,9 +51,9 @@
 \vskip1pc
 \centerline{\fontone La teoría de la información}
 
-\vfill\break % [3] Autor, Título, Subtítulo
+\vfill\break % [4] Créditos
 
-\null 
+\null
 
 \def\URI#1#2{\leavevmode\pdfcode \pdfstartlink
   attr {/Border [0 0 0]}
@@ -70,8 +75,7 @@
  ISBN-13: 978-1-4536-0915-6\par
  ISBN-10: 1-4536-0915-6\par
 
-\break % [4] Créditos
-
+\break % [5] Dedicatoria
 
 \null
 \vskip5pc
@@ -87,7 +91,7 @@
  \rightline{R.C.}
 \endgroup
 \vfil
-\break % [5] Dedicatoria
+\break
 
 \null\vfill\break % [6] Blanco
 
