edc.tex: \section -> \secid

--- a/tex/edc.tex
+++ b/tex/edc.tex
@@ -166,16 +166,14 @@
 \newcount\secno \secno=0
 \newcount\parno \parno=0
 
-\def\section{\number\secno}
-
 \font\fonttwosym=cmbsy10 scaled\magstep1
 \def\Stitle{{\fonttwosym \char"78}} %"
 
 \def\Section#1 \par{\everypar{}\parno=0  \advance\secno1 
  \vskip0pt plus 4\baselineskip\penalty-43
  \vskip0pt plus-4\baselineskip \vskip\baselineskip
- \titleline{\noindent\Stitle\fonttwo\section\space}%
-   {\fonttwo#1\pdflabel\toc1{#1}\lbl{#1}{\section}}%
+ \titleline{\noindent\Stitle\fonttwo\secid\space}%
+   {\fonttwo#1\pdflabel\toc1{#1}\lbl{#1}{\secid}}%
  \everypar{\numberedpars}\nobreak}
 
 \def\titleline#1#2{\setbox0\hbox{#1}\dimen0=\hsize \advance\dimen0 -\wd0
@@ -231,16 +229,16 @@
 \Subtitle<La teoría de la información>
 \Author<Ramón Casares>
 
+\def\secid{\number\secno}
 \input edc1.tex
 \input edc2.tex
 \input edc3.tex
 \input edc4.tex
 \input edc5.tex
 \input edc6.tex
-
+\let\secid=\empty
 \vskip1pc
 \centerline{\bf Fin}
-
 
 \vfill\break %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
